--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 											enemies, and raycasting projectiles.
 										</p>
 										<ul class="actions">
-											<li><a href="soc.html" class="button">More Details</a></li>
+											<li><a href="star_raid.html" class="button">More Details</a></li>
 										</ul>
 									</div>
 							</div>
