Space Journey and Star Raid Implementation

--- a/space_journey.html
+++ b/space_journey.html
@@ -20,9 +20,11 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="soc.html">Spirit of Calamity</a></li>
-						<li><a href="tiny_knight.html" class="active">Tiny Knight</a></li>
-						<li><a href="angry_apple.html">Angry Apple</a></li>
+						<li><a href="hells_kitchen.html">Hell's Kitchen</a></li>
+						<li><a href="bloodlust.html">Bloodlust</a></li>
+						<li><a href="star_raid.html">Star Raid</a></li>
+						<li><a href="space_journey.html" class="active">Space Journey</a></li>
+						<li><a href="other_pj.html">Spirit of Calamity</a></li>
 						<li><a href="other_pj.html">Smaller Projects</a></li>
 					</ul>
 				</nav>
@@ -35,12 +37,69 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Space Journey</h1>
-							<span class="image fit"><img src="images/pic07.jpg" alt="" /></span>
-							<p>.</p>
-							<p>.
+							<!-- <span class="image fit"><img src="images/pic16.jpg" alt="" /></span> -->
+							<span class="image fit"><img src="images/space_gameplay_2.gif" alt="" /></span>
+							<h2>Summary</h2>
+							<p>Space Journey was a group project that was created in p5.js for a engineering class. The main focus of the project was on making the environment and process
+								similar to working with a professional team on a budget. We had a deadline, sprint organization, peer evaluations, and a presentation for the stakeholders.
+								Even though this project was for a class my team and I thoroughly enjoyed working together and took it very seriously. The game's target audience was suppose
+								to be for children so we kept the games we made fairly easy while also making them fun and engaging. The game is set in space with each activity keeping true
+								to the theme.
 							</p>
+							<span class="image fit"><img src="images/space_gameplay.gif" alt="" /></span>
+							<h2>Gameplay</h2>
+							<p>There are three accessable games through the menu. There's a maze game where the player needs to draw their cursor to the end of the level without touching any walls.
+								If a wall is touched a "You Lose" text will prompt on the screen but the player only has to go back to start to restart. After the player is done with the game they
+								may click on the "menu" button on the top left of the screen to go back to the menu and select another game. The second game is an aim trainer. The player needs to click on the targets as
+								they appear but quickly before the timer runs out. When the timer runs out the game will end and the score they get will be thier final score. After the player may click
+								on the Menu button to choose another game. The final game is a memory matcher. The player must memorize the colors as they appear on the prompt as they will need to enter
+								those colors in a sequence at the end of the round. If the player gets the sequence correct then they gain a score of +100 but if they get it wrong then they will lose a
+								life. Once all lives are lost the game ends and whatever the player's score is before then is their final score. The player may then click on the "menu" button to select
+								another game.
+							</p>
+							<h2>Implemented Features</h2>
+							<div class="table-wrapper">
+								<table>
+									<thead>
+										<tr>
+											<th>Name</th>
+											<th>Description</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>Functional UI</td>
+											<td>UI buttons in the menu and games to navigate through the space.
+											</td>
+											<td></td>
+										</tr>
+										<tr>
+											<td>Timer</td>
+											<td>A timer function is used for the Aim Trainer and Memory games.</td>
+										</tr>
+										<tr>
+											<td>Moving Images in the Menu</td>
+											<td>Images or sprites are moved across the sceen randomly in the menu using the screen space coordinates.</td>
+										</tr>
+										<tr>
+											<td>Tutorials</td>
+											<td>The game features tutorials before each game to make sure the player knows what to do.</td>
+										</tr>
+										<tr>
+											<td>Custom Artwork</td>
+											<td>The sprite and background work are done by me using a pixel editing software called <a href="https://www.aseprite.org/">aseprite</span></a>.
+											</td>
+										</tr>
+											<td>Music and Sound</td>
+											<td>Sounds found from free website and mixed. <a href="https://opengameart.org/">https://opengameart.org/</span></a></td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+							<br>
+							<br>
 							<ul class="icons">
-								<li>Repository Link - <a href="https://github.com/MaDness1184/Tiny-Knight" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li>Link to Game and Code - <a href="https://editor.p5js.org/crobin62/sketches/LRRld1dKG">https://editor.p5js.org/crobin62/sketches/LRRld1dKG</span></a></li>
 							</ul>
 						</div>
 					</section>
