--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
 									<li>Languages that I am proficient in:<br> C#, C++. </li>
-									<li>Other languages that I have learned: Python, Java, C, HTML, MIPS Assembly.</li>
+									<li>Other languages that I know: Python, Java, C, HTML, MIPS Assembly.</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
@@ -132,11 +132,13 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/space_thumb.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Space Journey</h2>
-									<p>.</p>
+									<p>Space Journey was a group project that was created in p5.js for a engineering class. The main focus of the project was on making the
+										environment and process similar to working with a professional team on a budget. We had a deadline, sprint organization, peer evaluations, 
+										and a presentation for the stakeholders.</p>
 									<ul class="actions">
 										<li><a href="space_journey.html" class="button">More Details</a></li>
 									</ul>
