--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
+							<li><a href="#intro">Welcomee</a></li>
 							<li><a href="#one">About Me</a></li>
 							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Contact</a></li>
