Text Changes to Home Page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcomee</a></li>
+							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">About Me</a></li>
 							<li><a href="#two">Projects</a></li>
 							<li><a href="#three">Contact</a></li>
@@ -35,7 +35,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>Ryan's Portfolio</h1>
-							<p>A collection of Ryan Carpenter's development and experience with projects using the <a href="#https://unity.com/">Unity Engine</a> and other mediums.</p>
+							<p>A collection of Ryan Carpenter's development and experience with the <a href="#https://unity.com/">Unity Engine</a> and other mediums.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">About Me</a></li>
 							</ul>
@@ -46,35 +46,38 @@
 					<section id="one" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About Me</h2>
-							<p>Hi, I am a Computer Science undergraduate student studying at Arizona State University. My dream is to become a indie developer and start a game design business.
-								 I've had a passion in creating games for as long as I can remember and am commited to the projects I create.</p>
+							<p>Hi, I am a Computer Science undergraduate student studying at Arizona State University. My dream some day is to become a indie developer and start a business.
+								 I've had a passion in creating games for as long as I can remember and am very commited to the projects I create.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Programming</h3>
-									<li>Languages that I am proficient in:<br> C#, C++. </li>
-									<li>Other languages that I know: Python, Java, C, HTML, MIPS Assembly.</li>
+									<ul>
+										<li>Proficiant Languages: C#, C++, C.</li>
+										<li>Other languages that I've learned:<br> Java, HTML, Scheme, Prolog, Python, MIPS Assembly.</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-gamepad"></span>
 									<h3>Game Development</h3>
-									<li>Over 4 years of experience with the Unity Creation Engine.</li>
-									<li>Currently the Systems Officer of The Game Design Club at ASU.</li>
-									<li>Participated in multiple game jams (More info Below).</li>
+									<ul>
+										<li>Over 4 years of experience with the Unity Creation Engine.</li>
+										<li>Currently the systems officer of The Game Design Club at ASU.</li>
+										<li>Participated in multiple game jams (More info Below).</li>
 								</section>
 								<section>
 									<span class="icon solid major fa-graduation-cap"></span>
 									<h3>School</h3>
 									<ul>
-										<li> Currently studying at <a href="https://www.asu.edu/">Arizona State University</a>, Tempe, AZ.</li>
-										<li> Studied Computer Science for four years at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.</li>
-										<li> Studied Computer Science for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA.</li></ul>
+										<li> Currently studying Computer Science at <a href="https://www.asu.edu/">Arizona State University</a>, Tempe, AZ.</li>
+										<li> Studied for four years at <a href="https://prod.orangecoastcollege.edu/">Orange Coast Collage</a>, Costa Mesa.</li>
+										<li> Studied for two years at <a href="https://www.msjc.edu/">Mt. San Jacento Collage</a>, Menifee CA.</li></ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-paint-brush"></span>
 									<h3>Animation & Art</h3>
-									<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
-									<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app I use to create game assets.</li>
+									<ul>
+										<li>Experience in <a href="https://www.adobe.com/">Adobe</a> apps like Illistrator and Photoshop.</li>
+										<li>Experience in <a href="https://www.aseprite.org/">Aseprite</a>, an app I use to create game assets.</li>
 								</section>
 							</div>
 						</div>
@@ -86,11 +89,11 @@
 							<a href="#" class="image"><img src="images/pic15.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Hell's Kitchen</h2>
-									<p>A project made with a team for the Ludum Dare Game Jam #50 which is a challenge where competitors have 72 hours to create a game completely from scratch.
-										"Our game is about a doomed cheif that must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
-										Dynamic UI, leaderboard system, cutscenes, and a level system. It was a blast working with my partners on this project, so much so 
-										that we decided to port Hell's Kitchen to mobil which is still a work in progress.
+									<h2>Hell's Kitchen (2023)</h2>
+									<p>A project made with a small team for the Ludum Dare Game Jam #50 which is a challenge where competitors have 72 hours to create a game completely from scratch.
+										"Our game stars a doomed cheif that must cook for demons in Hell's most treacherous kitchen. This game features a crafting system,
+										interactable UI, a leaderboard system, cutscenes, and a level system. It was a blast working with each other on this project, so much so 
+										that we decided to port the game to mobile which is currently in progress. All assets and artwork are my own.
 									</p>
 									<ul class="actions">
 										<li><a href="hells_kitchen.html" class="button">More Details</a></li>
@@ -103,10 +106,10 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Bloodlust</h2>
-										<p> A project made with a friend for the Ludum Dare Game Jam treacherous#49 which is a challenge where competitors have 72 hours to create a game completely from scratch.
-											This game features dynamic AI and pathfinding using a pathfinding algorithm called A*. Also a dynamic NPC scheduling system, day and night cycle,
-											and a complete inventory system are just some of the amazing features we were able to implement in the 72 hour deadline.
+										<h2>Bloodlust (2021)</h2>
+										<p> A project made with a friend for the Ludum Dare Game Jam #49.
+											This game features sophisticated AI, pathfinding using A*, a dynamic NPC scheduling system, a day and night cycle,
+											and an inventory system. All assets and artwork are my own.
 										</p>
 										<ul class="actions">
 											<li><a href="bloodlust.html" class="button">More Details</a></li>
@@ -119,11 +122,11 @@
 							<div class="content">
 								<div class="content">
 									<div class="inner">
-										<h2>Star Raid</h2>
-										<p>Star Raid was a very ambitios project that I've developed with my friend. Unfortunately developement for the game had stopped
-											due to other responsibilities and wanting to move forward with other projects. This game was centered around co-op gameplay and
-											featured P2P client based multiplayer. This game also had multiple great features like a crafting system, A* pathfinding for
-											enemies, and raycasting projectiles.
+										<h2>Star Raid (2021)</h2>
+										<p>Star Raid was a very ambitious project that I was developing with one of my friends. Unfortunately developement for the game ceased
+											due to the increasingly large scope of the project and wanting to move forward with more interesting projects. This game was centered around co-op gameplay and
+											featured P2P client based multiplayer, a crafting system, A* pathfinding for
+											enemies, and raycasting projectiles, and a user based command system. All assets and artwork are my own.
 										</p>
 										<ul class="actions">
 											<li><a href="star_raid.html" class="button">More Details</a></li>
@@ -135,10 +138,10 @@
 							<a href="#" class="image"><img src="images/space_thumb.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Space Journey</h2>
-									<p>Space Journey was a group project that was created in p5.js for a engineering class. The main focus of the project was on making the
-										environment and process similar to working with a professional team on a budget. We had a deadline, sprint organization, peer evaluations, 
-										and a presentation for the stakeholders.</p>
+									<h2>Space Journey (2022)</h2>
+									<p>Space Journey was a group project created for an engineering class using p5.js. The main focus of the project was to simulate an
+										environment and process similar to working with a professional team on a budget. We had a deadlines, sprints, peer evaluations, 
+										and presentations to make for "stakeholders". All assets and artwork are my own.</p>
 									<ul class="actions">
 										<li><a href="space_journey.html" class="button">More Details</a></li>
 									</ul>
@@ -149,11 +152,11 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Spirit of Calamity</h2>
-									<p>Spirit of Calamity is personal project that I have been working on since I started developing games. This is my passion project, and although I feel very motivated to
-										create this, little has been done in development just because I'm looking for more experience before I tackle the challenge of making this 
-										project a dream come true. I am not willing to share my source code for protection purposes but I can give a detailed summary of what I have 
-										done with the project by clicking on "More Details". All assets and artwork are my own.
+									<h2>Spirit of Calamity (2020)</h2>
+									<p>Spirit of Calamity is personal project of mine that I have been working on for many years. This is my passion project, and although I feel very motivated to
+										create this, little has been done on this project because I'm looking for more experience before I tackle the challenge of making this 
+										dream project come true. Although I am not willing to share the source code of the project I can give a detailed description of what features
+										I have implementd in the "More Details" page. All assets and artwork are my own.
 									</p>
 									<ul class="actions">
 										<li><a href="soc.html" class="button">More Details</a></li>
