Rogue Nebula Page Setup

--- a/index.html
+++ b/index.html
@@ -86,6 +86,22 @@
 					<!-- Projects -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
+							<a href="#" class="image"><img src="images/pic17.jpg" alt="" data-position="top center" /></a>
+							<div class="content">
+								<div class="content">
+									<div class="inner">
+										<h2>Rogue Nebula (2023)</h2>
+										<p> A project made for the Video Game Design Club during their summer session. Endlessly plow through waves of enemies in the persuite of a high score. A game that is
+											heavily inspired by classic arcade games like Galaga, Defender 1981, and Space Invaders. This game features a scrolling 3D envirnment, a reactive user interface,
+											vibrant special effects, and an assortment of enemy behaviors.
+										</p>
+										<ul class="actions">
+											<li><a href="rogue_nebula.html" class="button">More Details</a></li>
+										</ul>
+									</div>
+							</div>
+						</section>
+						<section>
 							<a href="#" class="image"><img src="images/pic15.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
