--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<!-- Projects -->
 					<section id="two" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic17.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/nebula_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
@@ -102,7 +102,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic15.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/devil_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Hell's Kitchen (2023)</h2>
@@ -118,7 +118,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic14.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/blood_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
@@ -134,7 +134,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic13.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/star_title.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="content">
 									<div class="inner">
@@ -151,7 +151,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/space_thumb.png" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/space_title.png" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Space Journey (2022)</h2>
@@ -165,7 +165,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/spirit_title.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Spirit of Calamity (2020)</h2>
@@ -181,7 +181,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic05.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/dwarf_title.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Smaller Projects</h2>
